[package]
name = "my-led-roulette"
version = "0.1.1"
authors = ["Axel Viala <axel@darnuria.eu>"]
# Own solution to 05-ledroulette exercise
# from Henrik Böving <hargonix@gmail.com>
edition = "2020"

[dependencies.microbit-v2]
version = "0.13.0"
optional = true

#[dependencies.microbit]
# version = "0.12.0"
# optional = true

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }


[features]
v2 = ["microbit-v2"]
#v1 = ["microbit"]
